[package]
name = "enet-cs-sys"
description = "Rust low level bindings for ENet-CSharp the library, which is a independent ENet implementation with a modified protocol for C, C++, C#, and other languages."
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kalkatral/enet-cs-sys.git"
keywords = ["enet", "ffi", "bindings", "network"]
categories = ["external-ffi-bindings", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.64.0"
cmake = "0.1.49"
